--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-router-protected-route": "^1.0.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -13,5 +14,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy":"https://localhost:3000"
+  "proxy": "https://localhost:3000"
 }
